# onrobot_ros

./: .gitignore  README.md
onrobot_control/: CMakeLists.txt  package.xml  setup.py
onrobot_control/launch/: onrobot_gripper.launch
onrobot_control/scripts/: onrobot_gripper_node.py  test_gripper_control.py
onrobot_control/src/onrobot_control/: __init__.py  gripper_control_server.py  gripper_controller.py
onrobot_description/: CMakeLists.txt  package.xml  urdf.rviz
onrobot_description/config/: pid_gains.yaml  rg2_v1.yaml  rg6_v1.yaml
onrobot_description/launch/: test.launch  test_gazebo.launch  upload.launch
onrobot_description/meshes/rg2/collision/: rg2_finger_moment_bar.stl  rg2_finger_tip_bar_1.stl  rg2_finger_tip_bar_2.stl  rg2_finger_truss_bar.stl  rg2_fingertip_std.stl  rg2_gripper_body.stl
onrobot_description/meshes/rg2/visual/: rg2_finger_moment_bar.dae  rg2_finger_tip_bar.dae  rg2_finger_truss_bar.dae  rg2_fingertip_std.dae  rg2_gripper_body.dae  rg2_gripper_coupling.dae
onrobot_description/urdf/: materials.urdf.xacro  onrobot_rg.gazebo.xacro  onrobot_rg.transmission.xacro  onrobot_rg.urdf.xacro  rg2.urdf.xacro  rg2_robot.urdf.xacro  test.urdf.xacro
onrobot_gazebo/: CMakeLists.txt  package.xml
onrobot_gazebo/include/onrobot_gazebo/: gripper_plugin.h
onrobot_gazebo/src/: gripper_plugin.cpp
onrobot_ros/: CMakeLists.txt  package.xml
