<?xml version="1.0"?>

<package format="2">
    <name>onrobot_description</name>
    <version>0.1.0</version>
    <description>The onrobot_description package</description>

    <maintainer email="igor.kalevatykh@inria.fr">Igor Kalevatykh</maintainer>
    <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
</package>