<?xml version="1.0"?>

<package format="2">
    <name>onrobot_gazebo</name>
    <version>0.5.0</version>
    <description>The onrobot_gazebo package</description>

    <maintainer email="igor.kalevatykh@inria.fr">Igor Kalevatykh</maintainer>
    <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>roscpp</depend>
    <depend>actionlib</depend>

    <build_depend>control_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_export_depend>control_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>